# bag_converter

./: .gitignore  CMakeLists.txt  LICENSE  README.rst
cmake/: DetectEnvironment.cmake  Find3rdParty.cmake  FindGDAL.cmake  GenericFunctions.cmake  GetVersion.cmake  SetConfiguration.cmake  SetInstallationFolder.cmake  SetOptions.cmake
data/input/: tiny.metadata.xml  tiny.tiff
ext/lib/: bag.lib  gdal_i.lib
src/: CMakeLists.txt  bag_converter.cpp  bag_converter.rc  converter.cpp  converter.h  helper.cpp  helper.h  version.h
src/metadata/: metadata_template.xml
